# task-tracker-backend

./: .docker.fastapi.env.example  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  alembic.ini  compose.yaml  entrypoint.sh  example.env  fastapi.env.example  postgres.env.example  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_users_table.py  2025_03_26_1114-aaeedc24917b_create_user_table.py  2025_03_26_1115-0d7e427baa2b_add_indexes_for_some_fields.py
analytics-service/: .env.example  Pipfile
api/: __init__.py
app/: exceptions.py  routes.py  settings.py
app/database/: db_dependency.py  models.py  settings.py
app/models/: users.py
app/repositories/: user_repository.py
auth-service/: .docker.env.example  .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  compose.yaml  entrypoint.sh  pyproject.toml
auth-service/alembic/: env.py
auth-service/src/: constants.py
core-service/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  entrypoint.sh  pyproject.toml  setup.cfg
core-service/.github/workflows/: ci.yaml
core-service/src/: schema.yml
core-service/src/api/: __init__.py  urls.py
core-service/src/api/oauth/: permissions_view_set.py  router.py
core-service/src/api/todo/: __init__.py  router.py
core-service/src/api/todo/view_sets/: project_permissions_view_set.py  projects_view_set.py  tasks_view_set.py
core-service/src/apps/oauth/: authentication.py  dataclasses.py  models.py  permissions.py
core-service/src/apps/oauth/migrations/: 0001_initial.py  0002_group_hierarchy_func.py  0003_default_users_group.py
core-service/src/apps/todo/: models.py  pagination.py  tasks.py
core-service/src/apps/todo/dtos/: invitation_dtos.py
core-service/src/apps/todo/fields/: group_field.py  permission_field.py
core-service/src/apps/todo/management/commands/: run_kafka_consumer.py
core-service/src/apps/todo/migrations/: 0001_initial.py
core-service/src/apps/todo/serializers/: __init__.py  invite_serializers.py  project_serializer.py  tasks_serializers.py
core-service/src/apps/todo/services/: ses_service.py  task_service.py
core-service/src/config/: celery.py  settings.py
core-service/src/helpers/: exceptions.py  retry_decorator.py
core-service/src/services/: __init__.py  invitation_service.py  kafka_producer_service.py  permissions_service.py  redis_service.py
core-service/src/services/serializers/: invite_serializers.py  project_permissions_serializers.py
core-service/thirdparty_services/: compose.yml
files-service/: .env.example  alembic.ini  setup.cfg
files-service/alembic/: env.py
localstack/: compose.yml  configure.sh
scripts/: print_settings.py
settings/: general_settings.py
src/: constants.py
src/api/: urls.py
src/app/: exceptions.py
src/config/: settings.py  urls.py
src/helpers/: codes_helper.py  cryptography_helper.py  exceptions.py  jwt_helper.py  schema_helpers.py
src/models/: base.py  files_models.py  users.py
thirdparty-services/: .docker.mongo.env.example
web/: main.py  routes.py
(+167 files in other folders)
