[project]
name = "task-tracker-auth-fastapi"
version = "0.1.0"
description = ""
authors = [
    { name = "Daniil", email = "dan.shumski@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiokafka (>=0.12.0,<0.13.0)",
    "redis (>=5.2.1,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "sendsay-api-python (>=0.1.4,<0.2.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [
    { include = "scripts" },
    { include = "web" },
    { include = "settings" },
    { include = "app" }
]

[tool.poetry.scripts]
print-settings = "scripts.print_settings:print_settings"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"