[project]
name = "task-tracker-todo-django"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil",email = "dan.shumski@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "celery (>=5.4.0,<6.0.0)",
    "django-celery-beat (>=2.7.0,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
pre-commit = "^4.2.0"

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"

[tool.poetry]
package-mode = false

